--- a/.gitignore
+++ b/.gitignore
@@ -194,3 +194,5 @@ pip-selfcheck.json
 !.vscode/extensions.json
 
 # End of https://www.gitignore.io/api/python,flask,visualstudiocode
+/notes/notes/nbproject/private/
+/notes/HTML5Application/nbproject/private/
